--- a/adversial-equall.ipynb
+++ b/adversial-equall.ipynb
@@ -36,7 +36,7 @@
     "t1 = 10\n",
     "R = 1\n",
     "config = {'dir_path': '/mnt/e/GitHub Repo/LPM', 'data': data_option, 'model': model_option,\n",
-    "          't1': t1, 'R': R, 'simple_train_batch_size': 512, 'simple_test_batch_size': 400, 'epoch_num': 270,#batch128,100 num 350\n",
+    "          't1': t1, 'R': R, 'simple_train_batch_size': 512, 'simple_test_batch_size': 400, 'epoch_num': 350,#batch128,100 num 350\n",
     "          'lr': 0.1, 'momentum': 0.9, 'weight_decay': 5e-4, 'fixed': 'big'}"
    ]
   },
@@ -65,7 +65,7 @@
     "    else:\n",
     "        print('wrong data option')\n",
     "model_path = config['dir_path'] + '/models/' + config['data'] + '_' + config['model'] + '_t1=' + \\\n",
-    "             str(config['t1']) + '_R=' + config['R'] + \"_\" + config['fixed'] + '.pt'"
+    "    str(config['t1']) + '_R=' + config['R'] + \"_\" + config['fixed'] + '.pt'\n"
    ]
   },
   {
@@ -96,8 +96,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "writer = SummaryWriter()#./runs/\n",
+    "# writer当全局变量用了"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fgsm_attack(image, epsilon, data_grad):\n",
+    "    sign_data_grad = data_grad.sign()#符号\n",
+    "    perturbed_image = image + epsilon*sign_data_grad#扰动\n",
+    "    perturbed_image = torch.clamp(perturbed_image, 0, 1)#截取保证合理性\n",
+    "    return perturbed_image\n",
+    "\n",
+    "def fgsm_test(model, device, test_loader, epsilon):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#修改中\n",
-    "def FGSM_batch(trainloader,testloader, model, loss_function, optimizer, config):\n",
+    "def fgsm_batch(trainloader,testloader, model, loss_function, optimizer, config):\n",
     "    model.train()\n",
     "    for epoch in tqdm(range(config['epoch_num'])):\n",
     "        #training\n",
@@ -122,7 +149,7 @@
     "            total_loss += loss\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            \n",
+    "        \n",
     "        #testing\n",
     "        test_\n",
     "        #print('epoch:', epoch, 'loss:', total_loss,'time:',time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime()))"
