--- a/adversial-equall.ipynb
+++ b/adversial-equall.ipynb
@@ -96,17 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "writer = SummaryWriter()#./runs/\n",
-    "# writer当全局变量用了"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def fgsm_attack(image, epsilon, data_grad):\n",
     "    sign_data_grad = data_grad.sign()#符号\n",
     "    perturbed_image = image + epsilon*sign_data_grad#扰动\n",
@@ -149,10 +138,25 @@
     "            total_loss += loss\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "        \n",
+    "        writer.add_scalar(\"Loss/train\", total_loss, epoch)#记录训练损失\n",
     "        #testing\n",
+    "        model.eval()#下面进入测试部分\n",
+    "        \n",
     "        test_\n",
     "        #print('epoch:', epoch, 'loss:', total_loss,'time:',time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "writer = SummaryWriter()#./runs/\n",
+    "# writer当全局变量用了\n",
+    "fgsm_batch(train_data,test_data, model, loss_function, optimizer, config)#后面几项已经build了\n",
+    "writer.close()"
    ]
   },
   {
